--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             top: 0px;
             left: 0px;
             z-index: 13;
-            border: 1px solid red;
+            /* border: 1px solid red; */
+            width: 100%;
+            height: 100%;
 
         }
 
